# nsu-robotics-labs

lab1/ex01/: commands.txt
lab2/ex01/: .bashrc
lab2/ex03/: CMakeLists.txt
lab2/ex03/install/: local_setup.sh  setup.sh
lab2/ex03/install/asphodel/share/asphodel/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
lab2/ex03/install/asphodel/share/asphodel/cmake/: asphodelConfig.cmake
lab2/ex03/log/: latest_build
lab2/ex04/: colcon_build.txt
lab2/ex05/: rosnode_info.txt  rosnode_list.txt
lab2/ex06/: cmd_vel.txt
lab2/ex08/: rqt_console.txt.csv  three_turtles.launch
lab2/ex09/: CMakeLists.txt  package.xml
lab2/ex09/install/: local_setup.sh  setup.sh
lab2/ex09/install/ex09_package/include/ex09_package/ex09_package/msg/: full_name_message.h  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h
lab2/ex09/install/ex09_package/include/ex09_package/ex09_package/msg/detail/: full_name_message__functions.c  full_name_message__functions.h  full_name_message__rosidl_typesupport_fastrtps_c.h  full_name_message__rosidl_typesupport_fastrtps_cpp.hpp  full_name_message__rosidl_typesupport_introspection_c.h  full_name_message__rosidl_typesupport_introspection_cpp.hpp  full_name_message__struct.h  full_name_message__struct.hpp  full_name_message__traits.hpp  full_name_message__type_support.cpp
lab2/ex09/install/ex09_package/include/ex09_package/ex09_package/srv/: full_name_sum_service.h  full_name_sum_service.hpp
lab2/ex09/install/ex09_package/include/ex09_package/ex09_package/srv/detail/: full_name_sum_service__functions.c  full_name_sum_service__functions.h  (+5 more)
lab2/ex09/install/ex09_package/share/ex09_package/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
lab2/ex09/install/ex09_package/share/ex09_package/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  ex09_packageConfig.cmake  ex09_package__rosidl_typesupport_cppExport-noconfig.cmake  ex09_package__rosidl_typesupport_cppExport.cmake  ex09_package__rosidl_typesupport_introspection_cExport.cmake  ex09_package__rosidl_typesupport_introspection_cppExport.cmake  export_ex09_package__rosidl_generator_cppExport.cmake  export_ex09_package__rosidl_generator_pyExport-noconfig.cmake  export_ex09_package__rosidl_typesupport_fastrtps_cExport.cmake  export_ex09_package__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
lab2/ex09/install/ex09_package/share/ex09_package/msg/: FullNameMessage.idl
lab2/ex09/install/ex09_package/share/ex09_package/srv/: FullNameSumService.idl
lab2/ex09/log/: latest_build
lab2/ex09/src/ex09_package/: CMakeLists.txt
lab2/ex09/src/ex09_package/srv/log/: latest  latest_extensions
lab2/ex10/install/: local_setup.sh  setup.sh
lab2/ex10/install/ex10/lib/ex10/: ex10
lab2/ex10/install/ex10/share/ex10/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
lab2/ex10/log/: latest_build
lab2/ex10/src/ex10/: CMakeLists.txt
lab2/ex10/src/ex10/src/: publisher.cpp
lab2/ex10/src/ex10_package/: CMakeLists.txt  package.xml
lab2/ex10/src/ex10_package/src/: test_node.cpp
lab3/ex01/src/cpp_srvcli/: CMakeLists.txt  package.xml
lab3/ex01/src/cpp_srvcli/src/: client.cpp  server.cpp
lab3/ex01/src/full_name_service/: CMakeLists.txt  package.xml
lab3/ex02/src/test_actions/: CMakeLists.txt  package.xml
lab3/ex02/src/test_actions/src/: client.cpp  server.cpp
lab3/ex02/src/turtle_action/: CMakeLists.txt  package.xml
lab3/ex02/src/turtle_action/action/: MessageTurtleAction.action
lab3/ex03/: pose_speed_x1.yaml  pose_speed_x2.yaml  turtle_cmd_vel.mcap
lab3/ex04/: doctor.txt
lab3/ex05/src/move_to_goal/: CMakeLists.txt  package.xml
lab3/ex05/src/move_to_goal/src/: move_to_goal.cpp
lab4/ex01/: last_transform.txt  transform.txt
lab4/ex02/src/turtles_and_carrots/: CMakeLists.txt  package.xml
lab4/ex02/src/turtles_and_carrots/launch/: base.launch.py  launch_me.py
lab4/ex02/src/turtles_and_carrots/src/: broadcaster.cpp  dynamic_frame_broadcaster.cpp  listener.cpp
lab4/ex03/src/just_turtles/: CMakeLists.txt  package.xml
lab4/ex03/src/just_turtles/launch/: launch_me.py
lab4/ex03/src/just_turtles/src/: broadcaster.cpp  listener.cpp
lab5/ex01/: simple_diff_drive.urdf
lab5/ex02/: robot_display.launch.py  test_robot.urdf.xacro
lab5/ex03/src/robot_bringup/launch/: diff_drive.launch.py
lab5/ex04/src/robot_app/: CMakeLists.txt
lab5/ex04/src/robot_description/urdf/: ma_robot.urdf.xacro
lab5/ex05/robot_description/urdf/: ma_robot.urdf.xacro
lab6/ex01/robot_app/: package.xml
lab6/ex01/robot_app/src/: go_round.cpp
lab6/ex01/robot_bringup/launch/: diff_drive.launch.py
lab6/ex01/robot_description/urdf/: ma_robot.urdf.xacro
lab6/ex02/robot_app/: CMakeLists.txt
lab6/ex02/robot_bringup/config/: robot_bridge.yaml
lab6/ex02/robot_description/urdf/: ma_robot.urdf.xacro
lab6/ex03/robot_app/: CMakeLists.txt
lab6/ex03/robot_bringup/config/: robot_bridge.yaml
lab6/ex03/robot_description/urdf/: ma_robot.urdf.xacro
lab6/ex04/robot_app/: CMakeLists.txt  package.xml
lab6/ex04/robot_app/src/: stop_near_obstacle.cpp
lab6/ex04/robot_bringup/config/: robot_bridge.yaml
lab6/ex04/robot_bringup/launch/: diff_drive.launch.py
lab6/ex05/robot_app/src/: stop_near_obstacle.cpp
(+8 files in other folders)
